[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Cargo'ya projemizin hangi harici kasalara bağlı olduğunu ve bu kasaların hangi versiyonlarına ihtiyacımız olduğunu söyleriz 
[dependencies]
rand = "0.8.5"
